k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: buildify
  labels:
    app: buildify
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5173
    protocol: TCP
    name: http
  selector:
    app: buildify
