k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: buildify-ingress
  namespace: buildify
  annotations:
    external-dns.alpha.kubernetes.io/hostname: buildify.phexhub-np.int.bayer.com
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # Ensure X-Forwarded-Proto header is set to propagate original protocol information
    nginx.ingress.kubernetes.io/proxy-set-headers: "X-Forwarded-Proto https"
    nginx.ingress.kubernetes.io/proxy-redirect-from: http
    nginx.ingress.kubernetes.io/proxy-redirect-to: https
spec:
  ingressClassName: nginx
  rules:
  - host: buildify.phexhub-np.int.bayer.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: buildify
            port:
              number: 80
  tls:
  - hosts:
    - buildify.phexhub-np.int.bayer.com
    secretName: buildify-phexhub-dev-cluster-tls
